# pheme

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  seed.py  setup_norwegian_news.py  setup_topics.py
.github/workflows/: codeql.yml
app/: __init__.py  config.py  database.py  main.py  models.py
app/api/: __init__.py  topics.py
app/email/: composer.py  sender.py
app/fetchers/: __init__.py  base.py  extractor.py  factory.py  reddit.py  rss.py  web.py
app/pipeline/: digest.py  matching.py
app/scheduler/: jobs.py
app/summarizer/: llm.py
app/templates/: digest.html
app/ui/: __init__.py
tests/: conftest.py  test_api.py  test_blocked_keywords.py  test_config.py  test_database.py  test_email.py  test_extractor.py  test_matching.py  test_models.py  test_pipeline.py  test_scheduler.py  test_summarizer.py  test_topic_api.py  test_topics.py
tests/test_fetchers/: test_base.py  test_reddit.py  test_rss.py  test_web.py
